--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<script type="text/javascript" src="src/signals.js"></script>
-<script type="text/javascript" src="src/test.js"></script>
+<script type="module" src="src/signals.js"></script>
+<script type="module" src="src/test.js"></script>
 </body>
 </html>
