--- a/project/index.html
+++ b/project/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<script type="module" src="src/logjsx.js"></script>
 <script type="module" src="src/signals.js"></script>
 <script type="module" src="src/test.js"></script>
 </body>
