--- a/project/index.html
+++ b/project/index.html
@@ -134,7 +134,7 @@
 
 <div id="parent_div">
 
-    <canvas width="1500" height="600" id="my_Canvas" class="canvas"></canvas>
+    <canvas width="1500" height="600" id="gotham-canvas" class="canvas"></canvas>
     <div class="container">
         <div id="uiContainer" class="menu menuInv">
             <div id="ui">
@@ -145,9 +145,18 @@
 
 </div>
 
+<script type="text/javascript" src="./lib/webgl-utils.js"></script>
+<script type="text/javascript" src="./lib/m4.js"></script>
+<script type="text/javascript" src="./lib/mesh_utils.js"></script>
+<script type="text/javascript" src="./lib/glm_utils.js"></script>
+<script type="text/javascript" src="./lib/load_objx.js"></script>
+<script type="text/javascript" src="./lib/webgl-lessons-ui-modified.js"></script>
+<script type="text/javascript" src="./lib/lib-master.js"></script>
 
-<script type="module" src="src/logjsx.js"></script>
-<script type="module" src="src/signals.js"></script>
-<script type="module" src="src/test.js"></script>
+<script type="module" src="./src/logjsx.js"></script>
+<script type="module" src="./src/signals.js"></script>
+<script type="module" src="./src/geometry.js"></script>
+<script type="module" src="./src/webglx.js"></script>
+<script type="module" src="./src/gotham.js"></script>
 </body>
 </html>
