--- a/project/index.html
+++ b/project/index.html
@@ -140,7 +140,6 @@
             <div id="ui">
             </div>
         </div>
-        <span class="menuButton" onclick="toggleMenu()">Menu</span>
     </div>
 
 </div>
@@ -150,7 +149,7 @@
 <script type="text/javascript" src="./lib/mesh_utils.js"></script>
 <script type="text/javascript" src="./lib/glm_utils.js"></script>
 <script type="text/javascript" src="./lib/load_objx.js"></script>
-<script type="text/javascript" src="./lib/webgl-lessons-ui-modified.js"></script>
+<script type="text/javascript" src="./lib/dat.gui.js"></script>
 <script type="text/javascript" src="./lib/lib-master.js"></script>
 
 <script type="module" src="./src/logjsx.js"></script>
