--- a/project/index.html
+++ b/project/index.html
@@ -155,7 +155,8 @@
 <script type="module" src="./src/logjsx.js"></script>
 <script type="module" src="./src/signals.js"></script>
 <script type="module" src="./src/geometry.js"></script>
-<script type="module" src="./src/webglx.js"></script>
+<script type="module" src="./src/glx-model.js"></script>
+<script type="module" src="./src/glx-core.js"></script>
 <script type="module" src="./src/gotham.js"></script>
 </body>
 </html>
