--- a/project/index.html
+++ b/project/index.html
@@ -8,6 +8,15 @@
     <META HTTP-EQUIV="default-style" CONTENT=”no-cache”>
     <link rel="stylesheet" href="assets/styles/index.css">
     <link rel="stylesheet" href="assets/styles/progressbar.css">
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
+        }
+      }
+    </script>
+
     <title>Gotham - FCG Project</title>
 </head>
 
